all basic configurations done ready for the logic parts

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "puru-blogs-api",
   "version": "1.0.0",
   "description": "This is an api to a middle level api for a school",
-  "main": "app.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
